<resources>
    <string name="app_name">HealthQuiz</string>
    <string name="test_title">Health Trivia Quiz</string>

    <string name="question1">1. When was the first MRI machine made?</string>
    <string name="question1_hint">Please enter a 4-digit year number</string>
    <string name="answer1">1977</string>

    <string name="question2">2. How many times a day does the average heart beat?</string>
    <string name="answer2_1">100,000</string>
    <string name="answer2_2">10,000</string>
    <string name="answer2_3">10</string>
    <string name="answer2_4">1,000,000</string>

    <string name="question3">3. What is the name of the first-aid method to treat choking?</string>
    <string name="answer3_1">Himalayan twist</string>
    <string name="answer3_2">British bend</string>
    <string name="answer3_3">Heimlich maneuver</string>
    <string name="answer3_4">gut punch</string>

    <string name="question4">4. Your thumb is the same length as your...</string>
    <string name="answer4_1">eye</string>
    <string name="answer4_2">toe</string>
    <string name="answer4_3">ear</string>
    <string name="answer4_4">nose</string>

    <string name="question5">5. What is pneumonoultramicroscopicsilicovolcanoconiosis?</string>
    <string name="answer5_1">a parasite</string>
    <string name="answer5_2">a disorder caused by the lack of sleep</string>
    <string name="answer5_3">a lung disease caused by inhaling very fine ash and sand dust</string>
    <string name="answer5_4">fear of long words</string>

    <string name="question6">6. Which birth control methods are 99% effective (more than one answers are correct)?</string>
    <string name="answer6_1">birth control implant</string>
    <string name="answer6_2">condom</string>
    <string name="answer6_3">withdrawal (pull out method)</string>
    <string name="answer6_4">vasectomy / sterilization</string>

    <string name="check">Check answers</string>

    <string name="result">Result: </string>

</resources>
