<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/texture">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/test_title"
            android:textAllCaps="true"
            android:textColor="#673AB7"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="cursive" />

                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/QuestionFont"
                android:layout_marginTop="8dp"
                android:text="@string/question1" />

            <EditText
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question1_hint"
                android:textColor="@color/colorAnswer"
                android:textColorHint="@color/colorAnswer"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/QuestionFont"
                android:layout_marginTop="8dp"
                android:text="@string/question2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answer2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer2_1" />
                <RadioButton
                    android:id="@+id/answer2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer2_2" />
                <RadioButton
                    android:id="@+id/answer2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer2_3" />
                <RadioButton
                    android:id="@+id/answer2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer2_4" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/QuestionFont"
                android:layout_marginTop="8dp"
                android:text="@string/question3" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answer3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer3_1" />
                <RadioButton
                    android:id="@+id/answer3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer3_2" />
                <RadioButton
                    android:id="@+id/answer3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer3_3" />
                <RadioButton
                    android:id="@+id/answer3_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer3_4" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/QuestionFont"
                android:layout_marginTop="8dp"
                android:text="@string/question4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answer4_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer4_1" />
                <RadioButton
                    android:id="@+id/answer4_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer4_2" />
                <RadioButton
                    android:id="@+id/answer4_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer4_3" />
                <RadioButton
                    android:id="@+id/answer4_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer4_4" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/QuestionFont"
                android:layout_marginTop="8dp"
                android:text="@string/question5" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answer5_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer5_1" />
                <RadioButton
                    android:id="@+id/answer5_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer5_2" />
                <RadioButton
                    android:id="@+id/answer5_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer5_3" />
                <RadioButton
                    android:id="@+id/answer5_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAnswer"
                    android:buttonTint="@color/colorAnswer"
                    android:theme="@style/MyRadioCheckBox"
                    android:text="@string/answer5_4" />
            </RadioGroup>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkResults"
                android:text="@string/check"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
                    </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

